update api and document
