# storage/api-docs/api-docs.json
@@ -13,7 +13,7 @@
         "version": "1.0.0"
     },
     "paths": {
-        "/products": {
+        "/api/products": {
             "get": {
                 "tags": [
                     "Products"
@@ -68,7 +68,7 @@
                 }
             }
         },
-        "/products/{id}": {
+        "/api/products/{id}": {
             "get": {
                 "tags": [
                     "Products"
